crates/csskit_proc_macro/src/snapshots/csskit_proc_macro__test__alternatives_with_checks_derive_parse.snap
---
source: crates/csskit_proc_macro/src/test.rs
expression: pretty
---
::css_parse::keyword_set!(
    #[derive(::csskit_derives::Visitable)] #[visit(skip)] pub enum FooKeywords { Bar :
    "bar", }
);
#[derive(Parse)]
enum Foo {
    #[parse(keyword = FooKeywords::Bar)]
    Bar(::css_parse::T![Ident]),
    Angle(#[parse(in_range = -90f32..= 90f32)] Option<crate::Angle>),
}
