crates/csskit_proc_macro/src/snapshots/csskit_proc_macro__test__auto_and_length_with_range.snap
---
source: crates/csskit_proc_macro/src/test.rs
expression: pretty
---
#[derive(Parse)]
struct Foo<'a>(
    pub ::css_parse::T![Ident],
    #[parse(in_range = 0f32..= 100f32)]
    pub crate::Length,
);
