crates/csskit_proc_macro/src/snapshots/csskit_proc_macro__test__auto_or_fixed_multiplier.snap
---
source: crates/csskit_proc_macro/src/test.rs
expression: pretty
---
#[derive(
    ::csskit_derives::Peek,
    ::csskit_derives::ToSpan,
    ::csskit_derives::ToCursors,
    ::csskit_derives::Visitable,
    Debug,
    Clone,
    PartialEq,
    Eq,
    PartialOrd,
    Ord,
    Hash
)]
#[cfg_attr(feature = "serde", derive(serde::Serialize), serde())]
struct Foo(pub crate::AutoOr<(crate::Color, crate::Color)>);
#[automatically_derived]
impl<'a> ::css_parse::Parse<'a> for Foo {
    fn parse(p: &mut ::css_parse::Parser<'a>) -> ::css_parse::Result<Self> {
        use ::css_parse::{Parse, Peek};
        Ok(Self(p.parse::<crate::AutoOr<(crate::Color, crate::Color)>>()?))
    }
}
