crates/csskit_proc_macro/src/snapshots/csskit_proc_macro__test__auto_or_type_with_checks_derive_parse.snap
---
source: crates/csskit_proc_macro/src/test.rs
expression: pretty
---
#[derive(Parse)]
struct Foo(#[parse(in_range = -90f32..= 90f32)] pub crate::AutoOr<crate::Angle>);
