crates/csskit_proc_macro/src/snapshots/csskit_proc_macro__test__bg_image.snap
---
source: crates/csskit_proc_macro/src/test.rs
expression: pretty
---
struct Foo<'a>(pub crate::NoneOr<crate::Image<'a>>);
#[automatically_derived]
impl<'a> ::css_parse::Parse<'a> for Foo<'a> {
    fn parse(p: &mut ::css_parse::Parser<'a>) -> ::css_parse::Result<Self> {
        use ::css_parse::{Parse, Peek};
        Ok(Self(p.parse::<crate::NoneOr<crate::Image<'a>>>()?))
    }
}
