crates/csskit_proc_macro/src/snapshots/csskit_proc_macro__test__bounded_multiplier_of_keywords.snap
---
source: crates/csskit_proc_macro/src/test.rs
expression: pretty
---
::css_parse::keyword_set!(
    #[derive(::csskit_derives::Visitable)] #[visit(skip)] pub enum FooKeywords { Foo :
    "foo", Bar : "bar", }
);
#[derive(Visitable)]
struct Foo<'a>(
    #[visit(skip)]
    pub css_parse::T![Ident],
    #[visit(skip)]
    pub Option<css_parse::T![Ident]>,
);
#[automatically_derived]
impl<'a> ::css_parse::Parse<'a> for Foo<'a> {
    fn parse(p: &mut ::css_parse::Parser<'a>) -> ::css_parse::Result<Self> {
        use ::css_parse::{Parse, Peek};
        let val0 = p.parse::<FooKeywords>()?.into();
        let val1 = p.parse_if_peek::<FooKeywords>()?.map(|kw| kw.into());
        Ok(Self(val0, val1))
    }
}
