crates/csskit_proc_macro/src/snapshots/csskit_proc_macro__test__combinator_foo.snap
---
source: crates/csskit_proc_macro/src/test.rs
expression: pretty
---
::core::compile_error! {
    "wrong structure for this syntax, please redefine as an Enum"
}
